--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,9 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.9.1'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.9.1'
     testImplementation 'com.codeborne:selenide:6.8.1'
     testImplementation 'com.github.javafaker:javafaker:1.0.2'
 
